Fixed #32603 -- Added transaction to changelist processing.

--- a/AUTHORS
+++ b/AUTHORS
@@ -228,6 +228,7 @@ answer newbie questions, and generally made Django that much better:
     Daniel Roseman <http://roseman.org.uk/>
     Daniel Tao <https://philosopherdeveloper.com/>
     Daniel Wiesmann <daniel.wiesmann@gmail.com>
+    Danil Khismatulin <https://github.com/Nexcod>
     Danilo Bargen
     Dan Johnson <danj.py@gmail.com>
     Dan Palmer <dan@danpalmer.me>
